[package]
name = "emerald"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
regex-macro = "*"
custom_error = "*"
llvm-sys = "130"
inkwell = { version = "0.1.1", features = ["llvm13-0"] }
clap = { version = "4.1.8", features = ["derive"] }
